# docker-log-driver

./: .gitignore  Cargo.toml  Dockerfile.build  Makefile  README.md  config.json  docker-compose.ingest.yaml  docker-compose.test.yaml
docker-log-driver/: Cargo.toml
docker-log-driver/src/: client.rs  config.rs  error.rs  log.rs  main.rs  reader.rs  server.rs  task.rs
docker-log-driver/src/api/: log_driver.rs  mod.rs  plugin.rs
docker_protobuf/: Cargo.toml  build.rs
docker_protobuf/src/: entry.proto  lib.rs
