[package]
name = "docker-log-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
axum = "0.6.1"
chrono = { version = "0.4.23", features = ["serde"] }
docker_protobuf = { version = "0.1.0", path = "../docker_protobuf" }
envconfig = "0.10.0"
hyper = "0.14.23"
prost = "0.11.5"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["sync", "fs", "rt", "rt-multi-thread", "macros", "io-util"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
http-body = "0.4.5"
lazy_static = "1.4.0"
tower = "0.4.13"
